# visual_datadiode

./: .gitignore  README.md  batch_encode.py  debug_calibration.py  encode_enhanced.py  encode_fast.py  encode_parallel.py  encode_parallel_hpc.py  process_enhanced.py  requirements.txt  run_binary_receiver.bat  run_binary_sender.bat  run_receiver.bat  run_sender.bat  setup.bat  setup.py  test_100mb_hpc.py  test_binary_e2e.py  test_capture.py  test_comprehensive.py  test_devices.py  test_e2e.py  test_end_to_end.py  test_enhanced_encoding.py  test_integrity.py  test_interleaved.py  test_ms2131_raw.py  test_pipeline.py  test_record_decode.py  test_transfer.py
decoder_cuda/: CMakeLists.txt  README.md  build.bat
decoder_cuda/include/: block_header.h  constants.h  cuda_decoder.h  sha256.h
decoder_cuda/src/: block_assembler.cpp  cuda_decoder.cpp  fec_decoder.cpp  main.cpp  video_reader.cpp
decoder_cuda/src/kernels/: bit_pack.cu  grid_extract.cu  sync_detect.cu
protocol/: encoding_spec.md  frame_format.md  performance_analysis.md
receiver/: __init__.py  assembler.py  binary_receiver.py  capture.py  decoder.py  main.py  sync.py  ui.py  video_decoder.py  video_processor.py  video_recorder.py
sender/: __init__.py  binary_sender.py  chunker.py  encoder.py  main.py  renderer.py  timing.py  ui.py  video_encoder.py  video_prerender.py
shared/: __init__.py  binary_frame.py  block.py  constants.py  crypto.py  cuda_decoder.py  enhanced_decoder.py  enhanced_encoder.py  enhanced_encoding.py  fec.py
test_cuda/: test_input.txt
tests/: __init__.py  test_patterns.py
